# findThatProduct

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-26-backend.md  2026-05-26-frontend.md  2026-05-27-openai-integration.md  2026-05-27-search-cache-and-sse-queue.md
docs/superpowers/specs/: 2026-05-26-findthatproduct-design.md  (+1 more)
frontend/: index.html  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
frontend/src/: main.ts
frontend/src/ui/: Footer.ts  (+18 more)
k8s/: .gitignore  deployment.yaml
k8s/example/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
src/api/: main.py  main_test.py  schemas.py  schemas_test.py
src/application/: aggregator.py  aggregator_test.py  enrichment.py  enrichment_test.py  monitor_template.py  monitor_template_test.py  search_cache.py  search_cache_test.py  search_use_case.py  search_use_case_test.py
src/domain/: alternative_result.py  alternative_result_test.py  product.py  product_test.py  search_query.py  search_query_test.py  search_source.py
src/infrastructure/: alternate.py  amazon_nl.py  barcode_monster.py  barcode_monster_test.py  bol.py  bol_test.py  browser.py  changewatch_client.py  changewatch_client_test.py  coolblue.py  duckduckgo.py  duckduckgo_test.py  google_shopping.py  mediamarkt.py  mediamarkt_test.py  open_food_facts.py  open_food_facts_test.py  openai_client.py  openai_client_test.py  openai_search.py  openai_search_test.py  tweakers.py  upcitemdb.py  upcitemdb_test.py
(+21 files in other folders)
